@@ -1,5 +1,9 @@
 # $Id$
 
+2007-11-04	Konstantin V. Arkhipov
+
+	* ext/src/core/Form/: BasePrimitive implemented.
+
 2007-11-03	Konstantin V. Arkhipov
 
 	* core/Form/: alias support removed.
